--- a/src/components/header/Header@media.css
+++ b/src/components/header/Header@media.css
@@ -14,7 +14,7 @@
         padding: 0 3vw;
     }
 
-    .menu a, .div-admin {
+    .menu a, .menu button, .div-admin {
         font-size: 2.5vh;
     }
 
