--- a/src/components/createProduct/CreateProduct.css
+++ b/src/components/createProduct/CreateProduct.css
@@ -5,17 +5,12 @@
     margin: 20px auto;
 }
 
-.del {
-    visibility: hidden;
+.del, .false {
+    display: none;
 }
 
-.add {
-    visibility: visible;
-    padding: 10px 20px;
-    border-radius: 12px;
-    background-color: white;
-    width: 300px;
-    height: 200px;
+.add, .true {
+    display: flex;
 }
 
 .big-btn {
@@ -141,3 +136,35 @@ input[type="file"] {
     color: #47008e;
     margin-left: 5px;
 }
+
+.product-table {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid #79cbb8;
+    margin: 20px auto;
+}
+
+.name-table-product {
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 3fr 7fr 2fr 2fr;
+    align-items: center;
+}
+
+.cell-table-product {
+    width: fit-content;
+    overflow-wrap: anywhere;
+    text-align: center;
+    padding-left: 10px;
+}
+
+.header-product-name {
+    padding: 10px;
+    font-size: 15px;
+    font-weight: bolder;
+    color: #47008e;
+    text-align: center;
+}
+
