--- a/src/components/header/Header@media.css
+++ b/src/components/header/Header@media.css
@@ -101,7 +101,7 @@
         justify-content: start;
     }
 
-    .menu a {
+    .menu a, .menu button {
         justify-content: center;
         display: flex;
         width: 100%;
